--- a/loadingModel.ipynb
+++ b/loadingModel.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e928cf8",
+   "metadata": {},
+   "source": [
+    "<h3 style=color:yellow>Load packages</h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "b6ab41bc-fd58-4d82-a9bf-705c9acdd81f",
